--- a/views/products.html
+++ b/views/products.html
@@ -143,7 +143,7 @@
                         <%})%>
                     <%}else{%>
                         <%products.forEach((product) =>{%>
-                            <a href="/<%=gender%>/<%=category%>/<%=product.title_concat%>-<%=number%>" title="<%=product.title%>" class="link_product width-14 height-17 bx-s-2 hover-bx-s-10 m-2 m-lg-3 br-06 m-w-95 t-d-n">
+                            <a href="/<%=gender%>/<%=category%>/<%=product.title_concat%>-<%=product.number%>" title="<%=product.title%>" class="link_product width-14 height-17 bx-s-2 hover-bx-s-10 m-2 m-lg-3 br-06 m-w-95 t-d-n">
                                 <div class="center">
                                     <img src="<%=product.url_img%>" alt="<%=product.title%>" title="<%=product.title%>" class="imgs_product height-9 mb-2" style="max-width: 100% !important;">
                                 </div>
