--- a/views/carousel.html
+++ b/views/carousel.html
@@ -37,7 +37,7 @@
                                 Shoes
                             </button>
                         </a>
-                        <a href="/accessories?gender=men" class="m-2 m-lg-3">
+                        <a href="/men/accessories" class="m-2 m-lg-3">
                             <button class="bg-black br-06 bx-s-10 py-2 out-n border-0 px-4 fs-12 f-w-b fs-075 cl-white hover-scale-11">
                                 <i class="fab fa-shopify"></i>
                                 Accessories
@@ -68,7 +68,7 @@
                                 shoes
                             </button>
                         </a>
-                        <a href="/accessories?gender=women" class="m-2 m-lg-3">
+                        <a href="/women/accessories" class="m-2 m-lg-3">
                             <button class="bg-orange-woman br-06 bx-s-10 py-2 out-n border-0 px-4 fs-12 f-w-b cl-white hover-scale-11">
                                 <i class="fab fa-shopify"></i>
                                 accessories
