--- a/views/ajouter_produit.html
+++ b/views/ajouter_produit.html
@@ -243,7 +243,7 @@
             <option value="safety" class="text-center">safety</option>
             <option value="bottles" class="text-center">bottles</option>
             <option value="monitors" class="text-center">Monitors</option>
-            <option value="diapering" class="text-center">Diapering</option>
+            <option value="diapers" class="text-center">Diapers</option>
             <option value="baby-care" class="text-center">Baby care</option>
             <option value="car-seats" class="text-center">Car seats</option>
             <option value="baby-toys" class="text-center">Baby toys</option>
