--- a/views/ajouter_produit.html
+++ b/views/ajouter_produit.html
@@ -191,6 +191,7 @@
             <option value="gloves-mittens" class="text-center">gloves/mittens</option>
             <option value="glasses-watches" class="text-center">glasses/watches</option>
             <option value="playstation-games" class="text-center">playstation/games</option>
+            <option value="luggage-travel-gear" class="text-center">Luggage/Travel gear</option>
             <option value="bracelets-chains-jewelry" class="text-center">bracelets/chains/jewelry</option>
             <option value="pockets-saddlebags-pencil-cases" class="text-center">pockets/saddlebags/pencil cases</option>
             <option value="others" class="text-center">others</option>
@@ -210,6 +211,7 @@
             <option value="gloves-mittens" class="text-center">gloves/mittens</option>
             <option value="glasses-watches" class="text-center">glasses/watches</option>
             <option value="playstation-games" class="text-center">playstation/games</option>
+            <option value="luggage-travel-gear" class="text-center">Luggage/Travel gear</option>
             <option value="pockets-saddlebags-pencil-cases" class="text-center">pockets/saddlebags/pencil cases</option>
             <option value="others" class="text-center">others</option>
         </select>
