--- a/views/accueil.html
+++ b/views/accueil.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to our online store, your ultimate fashion destination for the whole family. Explore our curated selection of trendy clothing, shoes, and accessories for men, women, and children. Find your signature style at Our Store">
+    <meta name="p:domain_verify" content="4a0677d88726bcb8dd832f0b8616a217"/>
     <meta name="p:domain_verify" content="1c803f3c57ab3d3c73955b6301ef095c"/>
     <meta name="google-site-verification" content="WP9RBt_Vvp1SCg5YFTW40ergmySQ9BIIyjEDR-myWK8"/>
     <meta name="google-site-verification" content="AVRlmZYKLpO2UZejgOznQo5Cje2_XEqP4F5Fd5MX3Cs"/>
