--- a/views/ajouter_produit.html
+++ b/views/ajouter_produit.html
@@ -181,6 +181,7 @@
             <option value="makeup" class="text-center">makeup</option>
             <option value="perfumes" class="text-center">perfumes</option>
             <option value="handbags" class="text-center">handbags</option>
+            <option value="christmas" class="text-center">christmas</option>
             <option value="headbands" class="text-center">headbands</option>
             <option value="suitcases" class="text-center">suitcases</option>
             <option value="backpacks" class="text-center">backpacks</option>
@@ -204,6 +205,7 @@
             <option value="handbags" class="text-center">handbags</option>
             <option value="suitcases" class="text-center">suitcases</option>
             <option value="backpacks" class="text-center">backpacks</option>
+            <option value="christmas" class="text-center">christmas</option>
             <option value="skin-care" class="text-center">Skin Care</option>
             <option value="hats-caps" class="text-center">hats/caps</option>
             <option value="computer-bags" class="text-center">computer bags</option>
@@ -220,6 +222,7 @@
             <option value="belts" class="text-center">belts</option>
             <option value="backpacks" class="text-center">backpacks</option>
             <option value="hats-caps" class="text-center">hats/caps</option>
+            <option value="christmas" class="text-center">christmas</option>
             <option value="childrens-toys" class="text-center">children's toys</option>
             <option value="gloves-mittens" class="text-center">gloves/mittens</option>
             <option value="glasses-watches" class="text-center">glasses/watches</option>
@@ -230,6 +233,7 @@
             <option value="" class="text-center">accessories type</option>
             <option value="belts" class="text-center">belts</option>
             <option value="makeup" class="text-center">makeup</option>
+            <option value="christmas" class="text-center">christmas</option>
             <option value="backpacks" class="text-center">backpacks</option>
             <option value="hats-caps" class="text-center">hats/caps</option>
             <option value="childrens-toys" class="text-center">children's toys</option>
@@ -245,6 +249,7 @@
             <option value="safety" class="text-center">safety</option>
             <option value="bottles" class="text-center">bottles</option>
             <option value="monitors" class="text-center">Monitors</option>
+            <option value="christmas" class="text-center">christmas</option>
             <option value="diapers" class="text-center">Diapers</option>
             <option value="baby-care" class="text-center">Baby care</option>
             <option value="car-seats" class="text-center">Car seats</option>
