--- a/views/details_produit.html
+++ b/views/details_produit.html
@@ -27,13 +27,13 @@
     <link rel="stylesheet" href="/media-querie/mq_details_produit.css">
 
     <!-- 1. Whatsapp -->
-    <meta property="og:image" itemprop="image" content="https://beauty-fashion.onrender.com<%=product.url_img%>">
+    <meta property="og:image" itemprop="image" content="<%=product.url_img%>">
     <meta property="og:image:width" content="1000">
     <meta property="og:image:height" content="500">
     <%if(product.price>0){%>
         <meta property="og:title" content="<%=product.price_format%> $">
     <%}else{%>
-        <meta property="og:title" content="prix sur demande">
+        <meta property="og:title" content="Get price of your size">
     <%}%>
     <meta property="og:url" content="https://beauty-fashion.onrender.com/<%=gender%>/<%=category%>/<%=title_number%>">
     <meta property="og:description" content="<%=product.title%>">
@@ -43,11 +43,11 @@
     <%if(product.price>0){%>
         <meta name="twitter:title" content="<%=product.price_format%> $">
     <%}else{%>    
-        <meta name="twitter:title" content="Prix sur demande">
+        <meta name="twitter:title" content="Get price of your size">
     <%}%>
 
     <meta name="twitter:description" content="<%=product.title%>">
-    <meta name="twitter:image" itemprop="image" content="https://beauty-fashion.onrender.com<%=product.url_img%>">
+    <meta name="twitter:image" itemprop="image" content="<%=product.url_img%>">
     <meta property="twitter:image:width" content="1000">
     <meta property="twitter:image:height" content="500">
     <meta name="twitter:url" content="https://beauty-fashion.onrender.com/<%=gender%>/<%=category%>/<%=title_number%>">
