--- a/views/products.html
+++ b/views/products.html
@@ -88,13 +88,13 @@
                                     <%if(title_page == 'Clothing, shoes and accessories | Men, Women, Baby, Boy, Girl'){%>
                                         <img src="<%=product.url_img%>" alt="<%=product.title%>" title="<%=product.title%>" class="imgs_product height-13 mb-2" style="max-width: 100% !important;">
                                     <%}else{%>
-                                        <img src="<%=product.url_img%>" alt="<%=title_page%>" title="<%=product.title%>" class="imgs_product height-13 mb-2" style="max-width: 100% !important;">
+                                        <img src="<%=product.url_img%>" alt="<%=title_page%>" title="<%=title_page%>" class="imgs_product height-13 mb-2" style="max-width: 100% !important;">
                                     <%}%>
                                 </div>
-                                <div class="product_title text-muted fs-075 ellipsis-2 mb-3 px-2" >
+                                <div class="product_title text-muted fs-075 ellipsis-2 mb-3 px-2" title="<%=title_page%>">
                                     <%=product.title%>
                                 </div>
-                                <h5 class="center">
+                                <h5 class="center" title="<%=title_page%>">
                                     <%if(product.price>0){%>
                                         <%if(gender == 'men' || gender == 'boy' || gender == 'baby'){%>
                                             <span class="py-2 px-4 rounded bx-s-6 text-white fs-075 bg-black"><%=product.price%> $</span>
@@ -122,13 +122,13 @@
                                     <%if(title_page == 'Clothing, shoes and accessories | Men, Women, Baby, Boy, Girl'){%>
                                         <img src="<%=product.url_img%>" alt="<%=product.title%>" title="<%=product.title%>" class="imgs_product height-13 mb-2" style="max-width: 100% !important;">
                                     <%}else{%>
-                                        <img src="<%=product.url_img%>" alt="<%=title_page%>" title="<%=product.title%>" class="imgs_product height-13 mb-2" style="max-width: 100% !important;">
+                                        <img src="<%=product.url_img%>" alt="<%=title_page%>" title="<%=title_page%>" class="imgs_product height-13 mb-2" style="max-width: 100% !important;">
                                     <%}%>
                                 </div>
-                                <div class="product_title text-muted fs-075 ellipsis-2 mb-3 px-2">
+                                <div class="product_title text-muted fs-075 ellipsis-2 mb-3 px-2" title="<%=title_page%>">
                                     <%=product.title%>
                                 </div>
-                                <h5 class="center">
+                                <h5 class="center" title="<%=title_page%>">
                                     <%if(product.price>0){%>
                                         <%if(gender == 'men' || gender == 'boy' || gender == 'baby'){%>
                                             <span class="py-2 px-4 rounded bx-s-6 text-white fs-075 bg-black"><%=product.price%> $</span>
@@ -156,13 +156,13 @@
                                     <%if(title_page == 'Clothing, shoes and accessories | Men, Women, Baby, Boy, Girl'){%>
                                         <img src="<%=product.url_img%>" alt="<%=product.title%>" title="<%=product.title%>" class="imgs_product height-13 mb-2" style="max-width: 100% !important;">
                                     <%}else{%>
-                                        <img src="<%=product.url_img%>" alt="<%=title_page%>" title="<%=product.title%>" class="imgs_product height-13 mb-2" style="max-width: 100% !important;">
+                                        <img src="<%=product.url_img%>" alt="<%=title_page%>" title="<%=title_page%>" class="imgs_product height-13 mb-2" style="max-width: 100% !important;">
                                     <%}%>
                                 </div>
                                 <div class="product_title text-muted fs-075 ellipsis-2 mb-3 px-2">
                                     <%=product.title%>
                                 </div>
-                                <h5 class="center">
+                                <h5 class="center" title="<%=title_page%>">
                                     <%if(product.price>0){%>
                                         <%if(gender == 'men' || gender == 'boy' || gender == 'baby'){%>
                                             <span class="py-2 px-4 rounded bx-s-6 text-white fs-075 bg-black"><%=product.price%> $</span>
