--- a/views/products.html
+++ b/views/products.html
@@ -83,7 +83,7 @@
                 <div class="center mb-4">
                     <%if(category=='clothing'){%>
                         <%products.forEach((product) =>{%>
-                            <a href="/<%=gender%>/<%=category%>/<%=product.title_concat%>-<%=product.number%>" title="<%=product.title%>" class="link_product width-13 height-21 bx-s-2 hover-bx-s-10 m-2 m-lg-3 br-06 m-w-95 t-d-n">
+                            <a href="/<%=gender%>/<%=category%>/<%=product.title_concat%>-<%=product.number%>" target="_blank" title="<%=product.title%>" class="link_product width-13 height-21 bx-s-2 hover-bx-s-10 m-2 m-lg-3 br-06 m-w-95 t-d-n">
                                 <div class="center">
                                     <%if(title_page == 'Clothing, shoes and accessories | Men, Women, Baby, Boy, Girl'){%>
                                         <img src="<%=product.url_img%>" alt="<%=product.title%>" title="<%=product.title%>" class="imgs_product height-13 mb-2" style="max-width: 100% !important;">
@@ -117,7 +117,7 @@
                         <%})%>
                     <%}else if(category=='shoes'){%>
                         <%products.forEach((product) =>{%>
-                            <a href="/<%=gender%>/<%=category%>/<%=product.title_concat%>-<%=product.number%>" title="<%=product.title%>" class="link_product width-14 height-21 bx-s-2 hover-bx-s-10 m-2 m-lg-3 br-06 m-w-95 t-d-n">
+                            <a href="/<%=gender%>/<%=category%>/<%=product.title_concat%>-<%=product.number%>" target="_blank" title="<%=product.title%>" class="link_product width-14 height-21 bx-s-2 hover-bx-s-10 m-2 m-lg-3 br-06 m-w-95 t-d-n">
                                 <div class="center">
                                     <%if(title_page == 'Clothing, shoes and accessories | Men, Women, Baby, Boy, Girl'){%>
                                         <img src="<%=product.url_img%>" alt="<%=product.title%>" title="<%=product.title%>" class="imgs_product height-13 mb-2" style="max-width: 100% !important;">
@@ -151,7 +151,7 @@
                         <%})%>
                     <%}else{%>
                         <%products.forEach((product) =>{%>
-                            <a href="/<%=gender%>/<%=category%>/<%=product.title_concat%>-<%=product.number%>" title="<%=product.title%>" class="link_product width-14 height-21 bx-s-2 hover-bx-s-10 m-2 m-lg-3 br-06 m-w-95 t-d-n"> 
+                            <a href="/<%=gender%>/<%=category%>/<%=product.title_concat%>-<%=product.number%>" target="_blank" title="<%=product.title%>" class="link_product width-14 height-21 bx-s-2 hover-bx-s-10 m-2 m-lg-3 br-06 m-w-95 t-d-n"> 
                                 <div class="center">
                                     <%if(title_page == 'Clothing, shoes and accessories | Men, Women, Baby, Boy, Girl'){%>
                                         <img src="<%=product.url_img%>" alt="<%=product.title%>" title="<%=product.title%>" class="imgs_product height-13 mb-2" style="max-width: 100% !important;">
